@@ -1,3 +1,11 @@
+2003-11-06  Paul Eggert  <eggert@twinsun.com>
+
+	* xalloc.h [HAVE_STDINT_H]: Include <stdint.h>.
+	(xalloc_oversized) [! (PTRDIFF_MAX < SIZE_MAX)]:
+	Reject sizes of exactly SIZE_MAX bytes.
+	* xreadlink.c: Include "xalloc.h" before checking whether SIZE_MAX
+	is defined, since "xalloc.h" now defines SIZE_MAX on modern hosts.
+	
 2003-11-05  Bruno Haible  <bruno@clisp.org>
 
 	* xsize.h: Include limits.h, to avoid a possible collision with
